# io-lib

./: .gitmodules  BSD-Sockets.ods  CMakeLists.txt  README.md  REFERENCES.md  TODO  library.cmake
demo/: CMakeLists.txt  zhelpers.hpp
demo/lazypirate/: CMakeLists.txt  client.cpp  main.cpp  server.cpp
demo/netdevice/: CMakeLists.txt  main.cpp
demo/network_discoverer/: CMakeLists.txt  main.cpp  network_discoverer.cpp  network_discoverer.hpp  network_discoverer_qt5.cpp
include/pfs/io/: basic_file.hpp  basic_socket.hpp  buffer.hpp  device.hpp  file.hpp  inet_socket.hpp  local_server.hpp  local_socket.hpp  netdevice.hpp  permissions.hpp  tcp_server.hpp  tcp_socket.hpp  udp_server.hpp  udp_socket.hpp  unix_file.hpp  unix_socket.hpp
src/tests/: CMakeLists.txt
src/tests/bunch/: buffer.cpp  file.cpp  local_socket.cpp  tcp_socket.cpp  udp_socket.cpp  utils.hpp
tests/: CMakeLists.txt  buffer.cpp  file.cpp  local_socket.cpp  tcp_socket.cpp  udp_socket.cpp  utils.hpp
